* Adjust widths of comment form elements
* Sorted out the adaptive layout for screens less than 480px wide

= Stanzas =
* PullQuotes - Added 'pullquotes-readme.txt' file
* PullQuotes - Added left-side placement with new `to` parameter
* Taglines - Added 'taglines-readme.txt' file
* THA - Added 'tha-readme.txt' file

= Miscellaneous =
* Minor changes to text tense used in 'changelog.txt'
* Updated 'readme.txt' FAQ - What is the difference between how the "Featured Image" is used on a post and how it is used on a page?
* Updated 'readme.txt' FAQ - What are Stanzas?

/** ------------------------------------------------------------------------- */
== Version 1.1.1 ==
* Released March 2013

= Code =
* Added `all_comments_count` and `show_all_comments_count` methods to Comments class to be used in the 'comments.php' template when displaying total comments
* General minor code refactorings and improvements
* Moved `comments only tab`, `pingbacks only tab` and `trackbacks only tab` functionality into Comments class methods
* Moved `comments only panel`, `pingbacks only panel` and `trackbacks only panel` functionality into Comments class methods

= CSS =
* Added rounded corners for the comment type tabs and the comments panel
* Added `#d3d3d3` color as default tab background color; active is transparent
* Removed unused element for non-existent 'comments-toggle' script

= Miscellaneous =
* Remove $content_width set values from Structures class method `layout_open` and set in 'functions.php'
* Updated 'hooks-actions.txt'

/** ------------------------------------------------------------------------- */
== Version 1.1 ==
* Released March 2013

= Code =
* Added `excerpt_more_link` and attached to `excerpt_more` filter
* Added `anchor_title_text` for use with `excerpt_more_link` and permalink in the post meta details
* Added additional list wrapper around each comment type
* Added Breadcrumbs trails to pages and posts