@@ -3,12 +3,12 @@
   <component name="ChangeListManager">
     <list default="true" id="92756fba-9448-4539-aaa4-1deb2265cfe0" name="Default" comment="">
       <change type="MODIFICATION" beforePath="$PROJECT_DIR$/changelog.txt" afterPath="$PROJECT_DIR$/changelog.txt" />
-      <change type="MODIFICATION" beforePath="$PROJECT_DIR$/stanzas/stanzas.php" afterPath="$PROJECT_DIR$/stanzas/stanzas.php" />
+      <change type="MODIFICATION" beforePath="$PROJECT_DIR$/documentation/hooks-actions.txt" afterPath="$PROJECT_DIR$/documentation/hooks-actions.txt" />
       <change type="MODIFICATION" beforePath="$PROJECT_DIR$/.idea/workspace.xml" afterPath="$PROJECT_DIR$/.idea/workspace.xml" />
     </list>
     <ignored path="opus-primus.iws" />
     <ignored path=".idea/workspace.xml" />
-    <file path="/Dummy.txt" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1364580212214" ignored="false" />
+    <file path="/Dummy.txt" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1364580779485" ignored="false" />
     <file path="/opus-primus-header.php" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363452033046" ignored="false" />
     <file path="$PROJECT_DIR$/../wpfirstaid/opus-primus-header.php" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363452033046" ignored="false" />
     <file path="$PROJECT_DIR$/../wpfirstaid/wpfirstaid-header-layout.css" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363447365297" ignored="false" />
@@ -19,7 +19,7 @@
     <file path="/a.php" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363454224462" ignored="false" />
     <file path="/wpfa-opus-primus.css" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363548535886" ignored="false" />
     <file path="/opus-primus-full-size-video.js" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363479645500" ignored="false" />
-    <file path="/changelog.txt" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1364580715620" ignored="false" />
+    <file path="/changelog.txt" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1364580857114" ignored="false" />
     <file path="/opus-primus.css" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1364515181133" ignored="false" />
     <file path="/opus-primus-responsive-layout.css" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363549085306" ignored="false" />
     <file path="$PROJECT_DIR$/../wpfirstaid/.idea/workspace.xml" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1363556537351" ignored="false" />
@@ -37,6 +37,7 @@
     <file path="/taglines-readme.txt" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1364579495363" ignored="false" />
     <file path="/tha-readme.txt" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1364580043662" ignored="false" />
     <file path="/stanzas.php" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1364580550085" ignored="false" />
+    <file path="/hooks-actions.txt" changelist="92756fba-9448-4539-aaa4-1deb2265cfe0" time="1364580815898" ignored="false" />
     <option name="TRACKING_ENABLED" value="true" />
     <option name="SHOW_DIALOG" value="false" />
     <option name="HIGHLIGHT_CONFLICTS" value="true" />
@@ -56,19 +57,28 @@
   </component>
   <component name="FileEditorManager">
     <leaf>
-      <file leaf-file-name="changelog.txt" pinned="false" current="false" current-in-tab="false">
+      <file leaf-file-name="changelog.txt" pinned="false" current="true" current-in-tab="true">
         <entry file="file://$PROJECT_DIR$/changelog.txt">
           <provider selected="true" editor-type-id="text-editor">
-            <state line="8" column="7" selection-start="190" selection-end="190" vertical-scroll-proportion="0.0">
+            <state line="28" column="0" selection-start="1010" selection-end="1039" vertical-scroll-proportion="0.6898551">
               <folding />
             </state>
           </provider>
         </entry>
       </file>
-      <file leaf-file-name="stanzas.php" pinned="false" current="true" current-in-tab="true">
+      <file leaf-file-name="stanzas.php" pinned="false" current="false" current-in-tab="false">
         <entry file="file://$PROJECT_DIR$/stanzas/stanzas.php">
           <provider selected="true" editor-type-id="text-editor">
-            <state line="41" column="55" selection-start="1389" selection-end="1389" vertical-scroll-proportion="0.6159639">
+            <state line="41" column="55" selection-start="1389" selection-end="1389" vertical-scroll-proportion="-13.115385">
+              <folding />
+            </state>
+          </provider>
+        </entry>
+      </file>
+      <file leaf-file-name="hooks-actions.txt" pinned="false" current="false" current-in-tab="false">
+        <entry file="file://$PROJECT_DIR$/documentation/hooks-actions.txt">
+          <provider selected="true" editor-type-id="text-editor">
+            <state line="1" column="24" selection-start="40" selection-end="40" vertical-scroll-proportion="0.0">
               <folding />
             </state>
           </provider>
@@ -92,7 +102,6 @@
   <component name="IdeDocumentHistory">
     <option name="changedFiles">
       <list>
-        <option value="$PROJECT_DIR$/css/opus-primus-media-queries.css" />
         <option value="$PROJECT_DIR$/style.css" />
         <option value="$PROJECT_DIR$/index.php" />
         <option value="$PROJECT_DIR$/includes/class.OpusPrimusImages.php" />
@@ -106,8 +115,9 @@
         <option value="$PROJECT_DIR$/stanzas/taglines/class.OpusPrimusTagLines.php" />
         <option value="$PROJECT_DIR$/stanzas/tha/tha-readme.txt" />
         <option value="$PROJECT_DIR$/stanzas/tha/tha-support.php" />
-        <option value="$PROJECT_DIR$/changelog.txt" />
         <option value="$PROJECT_DIR$/stanzas/stanzas.php" />
+        <option value="$PROJECT_DIR$/documentation/hooks-actions.txt" />
+        <option value="$PROJECT_DIR$/changelog.txt" />
       </list>
     </option>
   </component>
@@ -209,6 +219,24 @@
             </PATH_ELEMENT>
             <PATH_ELEMENT>
               <option name="myItemId" value="opus-primus" />
+              <option name="myItemType" value="com.intellij.ide.projectView.impl.nodes.PsiDirectoryNode" />
+            </PATH_ELEMENT>
+          </PATH>
+          <PATH>
+            <PATH_ELEMENT>
+              <option name="myItemId" value="opus-primus" />
+              <option name="myItemType" value="com.intellij.ide.projectView.impl.nodes.ProjectViewProjectNode" />
+            </PATH_ELEMENT>
+            <PATH_ELEMENT>
+              <option name="myItemId" value="opus-primus" />
+              <option name="myItemType" value="com.intellij.ide.projectView.impl.nodes.ProjectViewModuleNode" />
+            </PATH_ELEMENT>
+            <PATH_ELEMENT>
+              <option name="myItemId" value="opus-primus" />
+              <option name="myItemType" value="com.intellij.ide.projectView.impl.nodes.PsiDirectoryNode" />
+            </PATH_ELEMENT>
+            <PATH_ELEMENT>
+              <option name="myItemId" value="documentation" />
               <option name="myItemType" value="com.intellij.ide.projectView.impl.nodes.PsiDirectoryNode" />
             </PATH_ELEMENT>
           </PATH>
@@ -1880,7 +1908,11 @@
       <created>1364580218587</created>
       <updated>1364580218587</updated>
     </task>
-    <option name="localTasksCounter" value="363" />
+    <task id="LOCAL-00363" summary="* Added action hook to allow custom Stanzas to be used">
+      <created>1364580787573</created>
+      <updated>1364580787573</updated>
+    </task>
+    <option name="localTasksCounter" value="364" />
     <servers>
       <GitHub shared="false">
         <commitMessageFormat>{id} {summary}</commitMessageFormat>
@@ -1985,7 +2017,7 @@
     <option name="WRAP_WHEN_TYPING_REACHES_RIGHT_MARGIN" value="false" />
     <option name="FORCE_NON_EMPTY_COMMENT" value="false" />
     <option name="CLEAR_INITIAL_COMMIT_MESSAGE" value="false" />
-    <option name="LAST_COMMIT_MESSAGE" value="* Added 'tha-readme.txt' file" />
+    <option name="LAST_COMMIT_MESSAGE" value="* Added action hook to allow custom Stanzas to be used" />
     <option name="MAKE_NEW_CHANGELIST_ACTIVE" value="false" />
     <option name="OPTIMIZE_IMPORTS_BEFORE_PROJECT_COMMIT" value="false" />
     <option name="CHECK_FILES_UP_TO_DATE_BEFORE_COMMIT" value="false" />
@@ -1999,7 +2031,6 @@
     <option name="UPDATE_FILTER_BY_SCOPE" value="false" />
     <option name="SHOW_FILE_HISTORY_AS_TREE" value="false" />
     <option name="FILE_HISTORY_SPLITTER_PROPORTION" value="0.6" />
-    <MESSAGE value="* Add some text filters for the 'Home' and 'Sticky&quot; text in the post breadcrumbs trail" />
     <MESSAGE value="* Changed 'leftmenu' to 'left-menu' (not used, yet)" />
     <MESSAGE value="* Limit width generated by &quot;Full Size Video&quot; JavaScript to a maximum of 1000px" />
     <MESSAGE value="* Fix CRLF issues" />
@@ -2024,6 +2055,7 @@
     <MESSAGE value="* Added details to 'pullquotes-readme.txt' file" />
     <MESSAGE value="* Added 'taglines-readme.txt' file&#10;* Minor changes to text tense used in 'changelog.txt'" />
     <MESSAGE value="* Added 'tha-readme.txt' file" />
+    <MESSAGE value="* Added action hook to allow custom Stanzas to be used" />
   </component>
   <component name="XDebuggerManager">
     <breakpoint-manager />
@@ -2041,11 +2073,6 @@
     </PATH>
   </component>
   <component name="editorHistoryManager">
-    <entry file="file://$PROJECT_DIR$/js/opus-primus-page-featured-image-adjust.js">
-      <provider selected="true" editor-type-id="text-editor">
-        <state line="47" column="0" selection-start="1740" selection-end="1740" vertical-scroll-proportion="1.157971" />
-      </provider>
-    </entry>
     <entry file="file://$PROJECT_DIR$/../../../wp-includes/comment.php">
       <provider selected="true" editor-type-id="text-editor">
         <state line="0" column="0" selection-start="0" selection-end="0" vertical-scroll-proportion="-2.6635945" />
@@ -2135,16 +2162,23 @@
         </state>
       </provider>
     </entry>
-    <entry file="file://$PROJECT_DIR$/changelog.txt">
+    <entry file="file://$PROJECT_DIR$/stanzas/stanzas.php">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="8" column="7" selection-start="190" selection-end="190" vertical-scroll-proportion="0.0">
+        <state line="41" column="55" selection-start="1389" selection-end="1389" vertical-scroll-proportion="-13.115385">
           <folding />
         </state>
       </provider>
     </entry>
-    <entry file="file://$PROJECT_DIR$/stanzas/stanzas.php">
+    <entry file="file://$PROJECT_DIR$/documentation/hooks-actions.txt">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="41" column="55" selection-start="1389" selection-end="1389" vertical-scroll-proportion="0.6159639">
+        <state line="1" column="24" selection-start="40" selection-end="40" vertical-scroll-proportion="0.0">
+          <folding />
+        </state>
+      </provider>
+    </entry>
+    <entry file="file://$PROJECT_DIR$/changelog.txt">
+      <provider selected="true" editor-type-id="text-editor">
+        <state line="28" column="0" selection-start="1010" selection-end="1039" vertical-scroll-proportion="0.6898551">
           <folding />
         </state>
       </provider>
