@@ -26,6 +26,7 @@ Please note, the Opus Primus copyright can be found at the end of this file.
 
 = Miscellaneous =
 * Minor changes to text tense used in 'changelog.txt'
+* Updated 'hooks-actions.txt'
 * Updated 'readme.txt' FAQ - What is the difference between how the "Featured Image" is used on a post and how it is used on a page?
 * Updated 'readme.txt' FAQ - What are Stanzas?
 
